# ECE2574-Data-Structure-and-Algorithm

./: README.md
hw1_starter/: ArrayBag.cpp  ArrayBag.h  CMakeLists.txt  hw1_test.cpp
hw2_starter/: CMakeLists.txt  Node.cpp  Node.h  Poly.cpp  Poly.h  PolyInterface.h  hw2_main.cpp  hw2_test.cpp
hw3_starter/: CMakeLists.txt  hw3_main.cpp  hw3_test.cpp  hw3_utilities.cpp  hw3_utilities.h
